# cookiecutter-python-rust-package

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: .gitignore  Cargo.toml  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/python/tests/: test_{{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/python/{{ cookiecutter.project_slug }}/: __init__.py  base.py  {{ cookiecutter.project_slug }}.pyi
{{ cookiecutter.project_slug }}/src/: lib.rs
