[package]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "{{ cookiecutter.project_slug }}"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
