[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "Maturin Starter Project w/PyO3 & Poetry"
authors = ["Sebastian Yonekura"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
maturin = "^0.14.12"
pytest = "^7.1.2"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[package.metadata.maturin]
name = "{{ cookiecutter.project_slug }}"


[tool.pytest.ini_options]
testpaths = [
    "python"
]
