[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "Maturin Starter Project w/PyO3 & Poetry"
authors = ["Sebastian Yonekura"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
maturin = "^0.14.12"
pytest = "^7.1.2"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.241"
mypy = "^0.991"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[package.metadata.maturin]
name = "{{ cookiecutter.project_slug }}"


[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "python"
]

[tool.coverage.paths]
source = ["python"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.project_slug }}"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
